Tons of UI Fixes and Added Custom Scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,3 +13,12 @@
         @apply text-emerald-500/80 bg-black border-gray-900 hover:border-gray-300 cursor-pointer duration-300 focus:ring-transparent ring-offset-transparent ring-black mr-3;
     }
 }
+
+@layer base {
+    ::-webkit-scrollbar {
+        @apply w-3 bg-black;
+    }
+    ::-webkit-scrollbar-thumb {
+        @apply rounded-lg bg-gradient-to-b from-[#8246E5]/50 to-gray-900 /*color trackbar*/;
+    }
+}
